Re-enable AbsoluteTest and delegate to implementation in "de-hsd-swe:math-utils:1.0"

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>de-hsd-swe</groupId>
+            <artifactId>math-utils</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-math3</artifactId>
             <version>3.6.1</version>
